virt01/deprecated/audiomuse-ai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiomuse-ai-ingress
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: audiomuse-ai.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: audiomuse-ai-flask-service
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - audiomuse-ai.k3s.nf.lab
    secretName: audiomuse-ai-cert-tls
